--- a/website/feedback.html
+++ b/website/feedback.html
@@ -12,9 +12,10 @@
       <img class="logo" src="CFormatterLogo.png" alt="C Formatter">
   </header>
   <div class="main-container" id="main-body">
-    <p class="description">Provide feedback or report a bug.</p>    
+      <p class="description" style="font-size: 30px">Provide feedback or report bug</p>
+    <p class="description">Please copy and paste faulty code suggestions if applicable.</p>    
     <form class="sign-in-form" method="post" action="feedback.php">
-        <textarea name="feedback" rows="15" cols="50" placeholder="Enter Feedback..."></textarea>
+        <textarea name="feedback" rows="25" cols="100" placeholder="Enter Feedback..."></textarea>
         <div>
             <input class="button-label" type="submit" value="Submit">
             <a class="button-label" href="account.php">Go Back</a>
